This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php


Server Fixes

--Family limit failure condition set to 35 (was 23).

--Fixed bug that caused stuck murder mouth emote if you target someone from
  more than 8 tiles away.

--Support for custom global messages.




Version 256    2019-August-2

--Support for offScreenSound_red tag (other offScreenSounds are white).

--Support for global messages broadcast from server to all connected clients
  not in tutorial.  Using it to announce war/peace status.




Server Fixes

--Fixed baby teleportation glitch.  Now if there's no place to drop a baby, 
  they go where you are standing instead of being thrown.

--Babies born outside rift area don't count toward survival requirement for
  determining group failure.

--Fixed offspring selection code to balance male and female babies, even for
  races that have different numbers of male and female characters (before,
  redhead and black mothers had 75% boy babies, now they have 50% like they
  should).

--Added support for an Eve window of time at the beginning of an arc.  Eves can
  only spawn during that time.

--Disabling baby-survivial-age based apocalypse trigger, and replacing it with
  a no-fertile-mothers-left (inside the barrier) trigger.

--Outside the Eve window, incoming babies will be born to SOME fertile mother,
  no matter what (despite lineage bans, birth cooldowns, etc.)

--Barrier radius 354, for roughly half a million tiles (tried 1/4 million
  which was too small, and 1 million, which was too big).

--Forcing all girls to be born if we're outside Eve window and number of
  fertile mothers inside the barrier falls below a threshold (1/15 of the
  population, or 2, whichever is larger).

--Fixed so that donkeytown can spawn Eves even after the Eve window closes.

--Fixed so that suiciding as a baby counts against your own genetic fitness
  score (a bug was preventing it from counting).
