@@ -3,6 +3,15 @@ This file only list changes to game code.  Changes to content can be found here:
 http://onehouronelife.com/updateLog.php
 
 
+
+
+Server Fixes
+
+--Fixed VOGP crash, if player count shrinks between invocations.
+
+
+
+
 Server Fixes
 
 --Family limit failure condition set to 35 (was 23).
